login patient ok + new java class

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,7 +45,8 @@
                     <div class="hero-card">
                         <h1>Bienvenue au Centre de Vaccination</h1>
                         <p class="lead">Protégez-vous, protégez les autres. Faites-vous vacciner dès aujourd'hui.</p>
-                        <a href="login" class="btn btn-primary btn-lg">Connexion</a>
+                        <a href="login" class="btn btn-primary btn-lg">Connexion Patient</a>
+                          <a href="loginP" class="btn btn-secondary btn-lg">Connexion Proffesionel</a>
                     </div>
                 </div>
             </div>
