--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,7 +46,7 @@
                         <h1>Bienvenue au Centre de Vaccination</h1>
                         <p class="lead">Protégez-vous, protégez les autres. Faites-vous vacciner dès aujourd'hui.</p>
                         <a href="login" class="btn btn-primary btn-lg">Connexion Patient</a>
-                          <a href="loginP" class="btn btn-secondary btn-lg">Connexion Proffesionel</a>
+                          <a href="login_pro" class="btn btn-secondary btn-lg">Connexion Proffesionel</a>
                     </div>
                 </div>
             </div>
